--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section>
+    <section class="top-banner">
       <div class="half-width">
         <h1>Welcome To</h1>
         <h1><span class="name-highlight"> Sayeed Ibrahim </span>World</h1>
@@ -25,9 +25,10 @@
         <p>
           Hi, I am Sayeed Mohammed Ibrahim. You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.
         </p>
+        <a class="link-button" href="https://www.linkedin.com/in/sayeed-mohammed-ibrahim-124b001a7/" target="_blank">HIRE ME</a>
       </div>
       <div class="half-width">
-        <img src="images/PicsArt_06-30-10.31.07.png" alt="First Photo">
+        <img src="images/PicsArt_07-01-11.10.35.png" alt="First Photo">
       </div>
     </section>
   </body>
